# rag-cleaner-cn

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: book_ocr.txt  video_transcript.srt  wechat_article.md
src/rag_cleaner_cn/: __init__.py  cli.py
src/rag_cleaner_cn/chunk/: __init__.py  chunker.py  overlap.py  semantic_chunker.py
src/rag_cleaner_cn/classify/: __init__.py  noise_classifier.py  paragraph_classifier.py  risk_classifier.py
src/rag_cleaner_cn/clean/: __init__.py  boilerplate.py  cleaner.py  dedupe.py  drop_rules.py
src/rag_cleaner_cn/config/: __init__.py  default_config.yaml  default_rules.yaml
src/rag_cleaner_cn/core/: __init__.py  batch.py  enums.py  errors.py  models.py  pipeline.py  profiles.py
src/rag_cleaner_cn/eval/: __init__.py  acceptance.py  retrieval_test.py
src/rag_cleaner_cn/export/: __init__.py  jsonl_exporter.py  manifest_exporter.py  markdown_exporter.py
src/rag_cleaner_cn/ingest/: __init__.py  base.py  html_loader.py  json_loader.py  markdown_loader.py  pdf_loader.py  text_loader.py  transcript_loader.py
src/rag_cleaner_cn/normalize/: __init__.py  markdown.py  punctuation.py  speaker.py  timestamp.py  whitespace.py
src/rag_cleaner_cn/repair/: __init__.py  asr_rules.py  filler_words.py  ocr_rules.py  punctuation_restore.py  repairer.py  repetition.py  review_marker.py
src/rag_cleaner_cn/segment/: __init__.py  heading.py  segmenter.py  transcript.py
src/rag_cleaner_cn/structure/: __init__.py  knowledge_outline.py
src/rag_cleaner_cn/utils/: hashing.py  ids.py  text.py
tests/: test_acceptance.py  test_batch_cli.py  test_chunk.py  test_clean.py  test_cli.py  test_export.py  test_normalize.py  test_repair.py  test_segment.py  test_structure.py  test_transcript.py
tests/fixtures/: ocr_noise.txt  transcript_noise.srt  wechat_noise.md
