[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-cleaner-cn"
version = "0.1.0"
description = "Conservative Chinese document cleaner and chunker for RAG pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "rag-cleaner-cn contributors" },
]
keywords = ["rag", "chinese", "cleaning", "knowledge-base", "chunking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Simplified)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.7.0",
  "pypdf>=4.0.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
rag-cleaner-cn = "rag_cleaner_cn.cli:app"
rcc = "rag_cleaner_cn.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_cleaner_cn"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/SECURITY.md",
  "/AGENTS.md",
  "/pyproject.toml",
]
exclude = [
  "/examples/output",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
